--- a/ormconfig.json
+++ b/ormconfig.json
@@ -12,7 +12,7 @@
       "src/entities/*.ts"
     ],
     "subscribers": [
-      "src/subscribers/*.ts"
+      "src/repositories/subscribers/*.ts"
     ],
     "migrations": [
       "src/migrations/*.ts"
@@ -20,6 +20,6 @@
     "cli": {
       "entitiesDir": "src/entities",
       "migrationsDir": "src/migrations",
-      "subscribersDir": "src/subscribers"
+      "subscribersDir": "src/subscribers/repositories"
     }
   }
