--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
   "author": "Timas Jackus <jackustimas@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/express-jwt": "^0.0.42",
     "@types/graphql-fields": "^1.3.2",
+    "@types/jsonwebtoken": "^8.3.7",
+    "@types/sha256": "^0.2.0",
     "apollo-server": "^2.10.1",
+    "apollo-server-express": "^2.10.1",
     "dataloader": "^2.0.0",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "graphql": "^14.6.0",
     "graphql-fields": "^2.0.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
+    "sha256": "^0.2.0",
     "type-graphql": "^0.17.6",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.22"
