--- a/package.json
+++ b/package.json
@@ -26,13 +26,20 @@
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
+    "@types/faker": "^4.1.10",
+    "@types/jest": "^25.1.3",
     "@types/node": "^13.7.4",
+    "faker": "^4.1.0",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
   },
   "scripts": {
     "start:dev": "npm run build:dev",
-    "build:dev": "nodemon 'src/index.ts' --exec 'ts-node' src/index.ts -e ts,graphql"
+    "build:dev": "nodemon 'src/graphql/app.ts' --exec 'ts-node' src/graphql/app.ts -e ts,graphql",
+    "db:setup": "ts-node ./tests/setup.ts",
+    "test": "npm run db:setup && jest"
   }
 }
