--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-jwt": "^5.3.1",
     "graphql": "^14.6.0",
     "graphql-fields": "^2.0.3",
+    "graphql-fields-list": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
