--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "graphql-fields-list": "^2.1.2",
         "jsonwebtoken": "^8.5.1",
         "pg": "^7.18.2",
+        "prettier": "^2.0.5",
         "reflect-metadata": "^0.1.13",
         "sha256": "^0.2.0",
         "type-graphql": "^0.17.6",
@@ -34,7 +35,7 @@
         "jest": "^25.1.0",
         "nodemon": "^2.0.2",
         "ts-jest": "^25.2.1",
-        "ts-node": "^8.6.2",
+        "ts-node": "^8.9.1",
         "typescript": "^3.8.2"
     },
     "scripts": {
