--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
         "@types/graphql-fields": "^1.3.2",
         "@types/jsonwebtoken": "^8.3.7",
         "@types/sha256": "^0.2.0",
+        "@types/uuid": "^7.0.3",
         "apollo-server": "^2.10.1",
         "apollo-server-express": "^2.10.1",
+        "axios": "^0.19.2",
         "dataloader": "^2.0.0",
         "express": "^4.17.1",
         "express-jwt": "^5.3.1",
         "graphql": "^14.6.0",
         "graphql-fields": "^2.0.3",
         "graphql-fields-list": "^2.1.2",
+        "graphql-upload": "^10.0.0",
         "jsonwebtoken": "^8.5.1",
         "pg": "^7.18.2",
         "prettier": "^2.0.5",
         "reflect-metadata": "^0.1.13",
+        "request": "^2.88.2",
         "sha256": "^0.2.0",
         "type-graphql": "^0.17.6",
         "typedi": "^0.8.0",
-        "typeorm": "^0.2.22"
+        "typeorm": "^0.2.22",
+        "uuid": "^8.0.0"
     },
     "devDependencies": {
         "@types/faker": "^4.1.10",
